kubernetes/operators/kube-system/cilium/policy/pod-gateway.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: pod-gateway-vpn-only
spec:
  endpointSelector:
    matchExpressions: # im losing it
      # This ruleset should apply to any endpoint with the label key
      - { key: 'vpn.home.arpa/ivpn', operator: NotIn, values: ['superfluous']}
  ingress:
    - fromEndpoints:
        - {}
    - fromEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/name: pod-gateway
            io.kubernetes.pod.namespace: pod-gateway
      toPorts:
        - ports:
            - port: "8472"
              protocol: UDP
            - port: "68"
              protocol: UDP
    - fromEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/instance: nginx-internal
            io.kubernetes.pod.namespace: nginx-system
  egress:
    - toEndpoints:
        - {}
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/instance: nginx-internal
            io.kubernetes.pod.namespace: nginx-system
      toPorts:
        - ports:
            - port: "443"
    - toEndpoints:
        - matchLabels:
            k8s:app.kubernetes.io/name: pod-gateway
            io.kubernetes.pod.namespace: pod-gateway
      toPorts:
        - ports:
            - port: "8472"
              protocol: UDP
            - port: "67"
              protocol: UDP
    - icmps:
        - fields:
            - type: 8
              family: IPv4
